2012-12-16  Tobias Burnus  <burnus@net-b.de>

	PR fortran/55638
	* resolve.c (resolve_formal_arglist): Allow VALUE without
	INTENT for ELEMENTAL procedures.

2012-12-10  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/52909
	* trans-decl.c (get_proc_pointer_decl): Apply name mangling.

2012-12-09  Tobias Burnus  <burnus@net-b.de>

	* trans-array.c (structure_alloc_comps): Use NULL_TREE in the
	call to gfc_deallocate_scalar_with_status.
	* trans-decl.c (gfc_trans_deferred_vars): Pass symbol.
	* trans-stmt.c (gfc_trans_deallocate): Pass polymorphic variable.

2012-12-09  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/55593
	* frontend-passes.c (doloop_code):  Use resolved_sym
	instead of n.sym->formal for formal argument list
	to get the correct version for all generic subroutines. 

2012-12-05  Tobias Burnus  <burnus@net-b.de>

	* resolve.c (generate_component_assignments): Fix memleak.

2012-12-03  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/55548
	* intrinsic.texi (SYSTEM_CLOCK): Update documentation of SYSTEM_CLOCK.

2012-12-03  Tobias Burnus  <burnus@net-b.de>
	    Janus Weil  <janus@gcc.gnu.org>

	PR fortran/37336
	* class.c (gfc_is_finalizable): New function.
	* gfortran.h (gfc_is_finalizable): Its prototype.
	* module.c (mio_component): Read initializer for vtype's _final.
	* resolve.c (resolve_fl_derived0): Call gfc_is_finalizable.
	* trans-expr.c (gfc_vtable_final_get): New function.
	(conv_parent_component_references): Fix comment.
	(gfc_conv_variable): Fix for scalar coarray components.
	* trans-intrinsic.c (conv_intrinsic_move_alloc): For BT_CLASS,
	pass the BT_CLASS type and not the declared type to
	gfc_deallocate_scalar_with_status.
	* trans.h (gfc_vtable_final_get): New prototype.

2012-12-03  Tobias Burnus  <burnus@net-b.de>

	PR fortran/55475
	* scanner.c (gfc_next_char_literal): Fix setting locus
	to free_line_length for the error message.
	* error.c (show_locus): Fix potential out-of-bounds
	read.

2012-12-03  Tobias Burnus  <burnus@net-b.de>
