@@ -1,5 +1,9 @@
 2012-12-16  Tobias Burnus  <burnus@net-b.de>
 
+	* gfortran.dg/move_alloc_14.f90: New.
+
+2012-12-16  Tobias Burnus  <burnus@net-b.de>
+
 	PR fortran/55638
 	* gfortran.dg/elemental_args_check_3.f90: Update dg-error.
 	* gfortran.dg/elemental_args_check_7.f90: New.
