@@ -1,5 +1,10 @@
 2012-12-16  Tobias Burnus  <burnus@net-b.de>
 
+	* trans-intrinsic.c (conv_intrinsic_move_alloc): Set dynamic
+	type of the FROM variable to the declared type.
+
+2012-12-16  Tobias Burnus  <burnus@net-b.de>
+
 	PR fortran/55638
 	* resolve.c (resolve_formal_arglist): Allow VALUE without
 	INTENT for ELEMENTAL procedures.
